fixing minor errors,spacing of content and colors of borders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ header{
     width: 100%;
     height:400px;
     padding:0;
+    margin: 0 0 20px 0;
 }
 /* header content */
 /* main title of the page and thier alternatives*/
@@ -32,9 +33,11 @@ display:inline-block;
 .title-box{
     float: left;
     height:100px;
-    width:60%;
+    width:58%;
 }
 .title{
+    position:relative;
+    top:-10px;
    font-family: 'Quattrocento', serif;
    font-weight: bold;
    font-size: 300%;
@@ -178,7 +181,7 @@ display:inline-block;
 }
 /* main navigation for website */
 nav{
-    margin: 0 0 0 10%;
+    margin: 0 10px 0 10%;
     height:30px;
     width:80%;
     background-color: #3a3a3a;
@@ -864,16 +867,16 @@ border: none;
     border-left: 2px solid green;
 }
 .orange-border1{
-    border-top: 2px solid orangered;
+    border-top: 2px solid rgb(255, 166, 0);
 }
 .orange-border2{
-    border-right: 2px solid orangered;
+    border-right: 2px solid rgb(255, 166, 0);
 }
 .orange-border3{
-    border-bottom: 2px solid orangered;
+    border-bottom: 2px solid rgb(255, 166, 0);
 }
 .orange-border4{
-    border-left: 2px solid orangered;
+    border-left: 2px solid rgb(255, 166, 0);
 }
     /*images for website*/
 .pic-border{
